--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+
   <style>
     /* General Reset */
     * {
@@ -22,23 +22,67 @@
       padding: 0;
     }
 
+    /* Header with Parallax Scrolling */
     header {
-      background: linear-gradient(to bottom, #000428, #004e92);
+      background: url('images/architecture_background.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: white;
-      text-align: center; ''
-      padding: 100px 20px;
+      text-align: center;
+      padding: 120px 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    header::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0, 4, 40, 0.8), rgba(0, 78, 146, 0.8));
+      z-index: 1;
+    }
+
+    header h1, header p {
+      position: relative;
+      z-index: 2;
     }
 
     header h1 {
       font-size: 3.5rem;
       margin-bottom: 20px;
+      animation: fadeIn 2s ease-in-out;
     }
 
     header p {
       font-size: 1.5rem;
       margin-bottom: 40px;
+      animation: fadeIn 3s ease-in-out;
     }
 
+    /* Floating Images (Global) */
+    .floating-images img {
+      position: absolute;
+      width: 80px;
+      height: auto;
+      opacity: 0.8;
+      animation: float 10s infinite ease-in-out;
+    }
+
+    .floating-images img:nth-child(1) { top: 10%; left: 15%; animation-delay: 0s; }
+    .floating-images img:nth-child(2) { top: 40%; left: 70%; animation-delay: 3s; }
+    .floating-images img:nth-child(3) { top: 75%; left: 30%; animation-delay: 6s; }
+    .floating-images img:nth-child(4) { top: 20%; left: 50%; animation-delay: 2s; }
+    .floating-images img:nth-child(5) { top: 60%; left: 80%; animation-delay: 4s; }
+    .floating-images img:nth-child(6) { top: 85%; left: 10%; animation-delay: 6s; }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+
+    /* Navigation Bubbles */
     .bubbles {
       display: flex;
       justify-content: center;
@@ -64,6 +108,8 @@
     .bubble:hover {
       transform: scale(1.1);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+      background: linear-gradient(to bottom, #004e92, #000428);
+      color: white;
     }
 
     section {
@@ -71,6 +117,7 @@
       text-align: center;
       background-color: #f7f7f7;
       color: #004e92;
+      position: relative;
     }
 
     section:nth-of-type(odd) {
@@ -99,6 +146,11 @@
     footer a:hover {
       color: white;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
   </style>
 </head>
 <body>
@@ -122,6 +174,14 @@
 </nav>
 
 <header>
+  <div class="floating-images">
+    <img src="eiffel_tower.jpg" alt="Eiffel Tower">
+    <img src="Kheops-Pyramid.jpg" alt="Sydney Opera House">
+    <img src="taj_mahal.jpg" alt="Taj Mahal">
+    <img src="lotus_temple.jpg" alt="Lotus Temple">
+    <img src="sagrada_familia.jpg" alt="Sagrada Família">
+    <img src="versailles.jpg" alt="Palace of Versailles">
+  </div>
   <h1>Welcome to the World of Architecture</h1>
   <p>Explore timeless designs and iconic structures through an interactive experience.</p>
   <div class="bubbles">
